# advent_of_code

./: .gitignore
2022/: .gitattributes  .ocamlformat  TODO  dune-project
2022/clojure/: .gitignore  day01.clj  day01_test.clj
2022/clojure/aoc/: CHANGELOG.md  project.clj
2022/clojure/aoc/test/aoc/: core_test.clj
2022/elixir/: .formatter.exs
2022/elixir/lib/: aoc.ex
2022/elixir/test/: aoc_test.exs
2022/elm/tests/: Day01.elm  Inputs.elm
2022/fsharp/: .gitignore  Day01.fs  Program.fs  aoc.fsproj
2022/gleam/src/: aoc.gleam
2022/gleam/test/: aoc_test.gleam
2022/go/: main.go
2022/go/day01/: day01.go  day01_test.go
2022/haskell/: haskell.cabal
2022/haskell/app/: Main.hs
2022/haskell/src/: Day01.hs
2022/java/: build.gradle
2022/java/src/main/java/org/example/: Day01.java  Main.java
2022/java/src/test/java/org/example/: Day01Test.java
2022/lib/: day01.ml  dune  utils.ml
2022/ocaml/: .ocamlformat
2022/ocaml/lib/: day01.ml  day02.ml  dune  err_handling.ml
2022/racket/: aoc.rkt  wip.rkt
2022/roc/: main.roc
2022/ruby/lib/: day01.rb
2022/ruby/test/: day01_test.rb
2022/rust/src/: lib.rs  main.rs
