cabal-version:      2.4
name:               aoc
version:            0.1


common ghc-options
    ghc-options:      -Wall
                      -freverse-errors
                      -fwrite-ide-info
                      -hiedir=.hie

library
    import:           ghc-options
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0
                    , split
    exposed-modules:  Day01

executable aoc
    import:           ghc-options
    default-language: Haskell2010
    hs-source-dirs:   app
    build-depends:    base ^>=4.14.3.0
                    , aoc
    main-is:          Main.hs
